--- a/app/src/main/res/layout/activity_result_screen.xml
+++ b/app/src/main/res/layout/activity_result_screen.xml
@@ -14,7 +14,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tic-Tac-Toe"
+        android:text="Tic-TacToe"
         android:textSize="35dp"
         android:textStyle="bold"
         android:id="@+id/resultTxt"
@@ -22,7 +22,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start  Match"
+        android:text="Start New Match"
         android:layout_marginTop="150dp"
         android:backgroundTint="#DB1313"
         android:textColor="#ffffff"
