--- a/app/src/main/res/layout/activity_start_screen.xml
+++ b/app/src/main/res/layout/activity_start_screen.xml
@@ -19,6 +19,14 @@
         android:textColor="#FF5722"
         android:textStyle="bold"
         android:layout_marginBottom="40sp"
+        android:id="@+id/gameTitle"
+        />
+    <com.airbnb.lottie.LottieAnimationView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="false"
+        android:id="@+id/splashScreenAnimation"
         />
 
 </LinearLayout>
